fix: Remove starlight team provided workaround/hack, as it was breaking midpoint, causing left-align.

--- a/src/frontend/src/styles/site.css
+++ b/src/frontend/src/styles/site.css
@@ -856,75 +856,6 @@ li a.external-link::after {
   --sl-content-width: 68rem;
 }
 
-/* 
-see: https://github.com/withastro/starlight/issues/3513#issuecomment-3638588654
-here the second rem value can be configured to your needs, 
-it configures at which point the mobile toc should be replaced with the normal toc */
-@media (min-width: 72rem) and (max-width: 99.999rem) {
-  :root {
-    --sl-content-width: 10000rem;
-    /* very dirty */
-    --sl-content-pad-x: 1rem;
-    --sl-mobile-toc-height: 3rem;
-  }
-
-  .lg\:sl-hidden {
-    display: block;
-  }
-
-  .lg\:sl-flex {
-    display: flex;
-  }
-
-  .lg\:sl-block {
-    display: flex;
-  }
-
-  .right-sidebar-panel > .sl-container {
-    width: calc(var(--sl-sidebar-width) - 2 * var(--sl-sidebar-pad-x));
-  }
-
-  .content-panel > .sl-container {
-    margin-inline: 0;
-  }
-}
-
-/* remember to also update this value accordingly */
-@media (min-width: 100rem) {
-  :root {
-    --sl-content-pad-x: 1.5rem;
-    --sl-mobile-toc-height: 0rem;
-  }
-
-  .lg\:sl-hidden {
-    display: none;
-  }
-
-  .lg\:sl-flex {
-    display: flex;
-  }
-
-  .lg\:sl-block {
-    display: block;
-  }
-
-  .right-sidebar-panel > .sl-container {
-    max-width: calc(
-      (
-        (
-            100vw - var(--sl-sidebar-width) - 2 * var(--sl-content-pad-x) - 2 *
-              var(--sl-sidebar-pad-x)
-          ) *
-          0.25 /* MAGIC NUMBER 🥲 */
-      )
-    );
-  }
-
-  .content-panel > .sl-container {
-    margin-inline: var(--sl-content-margin-inline, auto);
-  }
-}
-
 @media (prefers-reduced-motion: no-preference) {
   @view-transition {
     navigation: auto;
